Fixed double scroll bar when screen width is < 767px.

--- a/css/basic.css
+++ b/css/basic.css
@@ -25,6 +25,7 @@ body
     font-weight: 400;
 	margin: 0;
     min-height: 100%;
+	overflow-y: hidden;
 	-webkit-font-smoothing: antialiased;
 }
 
